# thesis_workspace

./: ..gitignore.swp  .gitignore  .gitignore.save  .rosinstall  README.md  example.py  requirements.txt  requirements_python2.txt  requirements_python3.txt
beginner_tutorials/: CMakeLists.txt  package.xml
beginner_tutorials/scripts/: add_two_ints_client.py  add_two_ints_server.py
contact_sensor/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
contact_sensor/msg/: GripperCollision.msg
data_analysis/: .~lock.traj0.csv#  CMakeLists.txt  package.xml  setup.py
data_analysis/data/: .~lock.raw_trajectory_4.txt.csv#  raw_trajectory_1.txt.csv  raw_trajectory_2.txt.csv  raw_trajectory_3.txt.csv  raw_trajectory_4.txt.csv  raw_trajectory_5.txt.csv  raw_trajectory_6.txt.csv  raw_trajectory_7.txt.csv  raw_trajectory_8.txt.csv  resampled_0.txt.csv  resampled_1.txt.csv  resampled_10.txt.csv  resampled_2.txt.csv  resampled_3.txt.csv  resampled_4.txt.csv  resampled_5.txt.csv  resampled_6.txt.csv  resampled_7.txt.csv  resampled_8.txt.csv  resampled_9.txt.csv
data_analysis/src/: data.csv  data_analysis.py
data_logger/: CMakeLists.txt  experiment.rviz  experiment1.rviz  experiment1_backup.rviz  experiment2.rviz  operator.py  operator.ui  operator_gui.rviz  package.xml  text.txt
data_logger/launch/: create_data_before_experiment.launch  data_creator.launch  data_logging.launch  gui.launch
data_logger/msg/: OperatorGUIinteraction.msg  TrajectoryData.msg
data_logger/nodes/: create_data_before_experiment.py  data_creator.py  data_logger_node.py  gui.py  operator_gui.py
data_logger/srv/: AddRefinement.srv  CreateParticipant.srv  IncrementNumberOfUpdates.srv  IncrementObjectMissed.srv  IncrementObstaclesHit.srv  SetNumberOfRefinements.srv  SetNumberOfUpdates.srv  SetObjectMissed.srv  SetObstaclesHit.srv  SetParameters.srv  SetPrediction.srv  SetTime.srv  ToCsv.srv
dynamixel_workbench_msgs/: CMakeLists.txt
dynamixel_workbench_msgs/cmake/: dynamixel_workbench_msgsConfig.cmake
execution_failure_detection/: CMakeLists.txt  package.xml  setup.py
execution_failure_detection/launch/: execution_failure_detection.launch  execution_failure_detection_dishwasher.launch  scene_drawer.launch  scene_drawer_dishwasher.launch  table_transform_publisher.launch  upper_basket_transform_publisher.launch
execution_failure_detection/msg/: ExecutionFailure.msg
execution_failure_detection/nodes/: execution_failure_detection_dishwasher_node.py  execution_failure_detection_node.py  frames.gv  object_wrt_ellipsoid_publisher.py  scene_drawer_dishwasher_node.py  scene_drawer_node.py  table_transform_publisher.py  test.py  upper_basket_transform_publisher.py
execution_failure_detection/srv/: GetExecutionFailure.srv  SetExpectedObjectPosition.srv
experiment/: CMakeLists.txt  notes.txt  package.xml  setup.py
experiment/debug/: refined_trajectory.txt
experiment/launch/: experiment.launch  needed_nodes.launch  training.launch
experiment/msg/: FormGUIinteraction.msg
experiment/nodes/: experiment_node.py  training_node.py
experiment/srv/: SetText.srv
experiment/uis/: form.py  form.ui  form_gui.py
gui/: CMakeLists.txt  experiment.py  gui.rviz  package.xml  refined_trajectory.txt
gui/data/: raw_trajectory_10.txt  raw_trajectory_12.txt  raw_trajectory_13.txt  raw_trajectory_18.txt  raw_trajectory_21.txt  raw_trajectory_25.txt  raw_trajectory_27.txt  raw_trajectory_8.txt  refined_trajectory_fast.txt  refined_trajectory_new_model.txt  refined_trajectory_other_setup.txt  refined_trajectory_situation1.txt  refined_trajectory_situation1_2.txt  refined_trajectory_situation_1_3.txt  refined_trajectory_slow.txt
gui/launch/: gui.launch  offline_pendant_gui.launch  online_pendant_gui.launch
gui/nodes/: experiment.py  experiment.ui  extra_stuff.txt  gui.py  gui_generator.py  offline_pendant_gui.py  online_pendant_gui.py
gui/uis/: offline_pendant.py  offline_pendant.ui  online_pendant.py  online_pendant.ui
learning_from_demonstration/: CMakeLists.txt  package.xml  server_tester.py  setup.py
learning_from_demonstration/launch/: generalization.launch  learning_from_demonstration.launch  trajectory_teaching.launch
learning_from_demonstration/msg/: prompTraj.msg
learning_from_demonstration/nodes/: lfd_node.py  trajectory_teaching.py
learning_from_demonstration/srv/: AddDemonstration.srv  BuildInitialModel.srv  ExecuteTrajectory.srv  GetContext.srv  GetDemonstration.srv  GetEEPose.srv  GetObjectPosition.srv  GetTeachStateOmni.srv  GetTimer.srv  GetTrajectory.srv  GoToPose.srv  MakePrediction.srv  SetObject.srv  SetTeachStateOmni.srv  SetTeachingMode.srv  WelfordUpdate.srv
lfd_msgs/: CMakeLists.txt  package.xml
lfd_msgs/msg/: TrajectoryVisualization.msg
marco_launcher/: CMakeLists.txt  package.xml
marco_launcher/launch/: end_effector_cam.launch  gripper_dynamixel.launch  rear_cam.launch  teleop_marco.launch  wifi_roaming.launch  wrist_ft.launch
marco_lfd/: CMakeLists.txt  package.xml
marco_lfd/launch/: dmp_node.launch  teaching_node.launch  trajectory_parser.launch
marco_lfd/scripts/: armGoalNode.py  dmpNode.py  keyboardNode.py  moveitNode.py  teachingNode.py
marco_model/marco_control/: CMakeLists.txt  package.xml
master_control/: CMakeLists.txt
master_control/msg/: ControlComm.msg
promp/: CMakeLists.txt  package.xml  setup.py
promp_context/: CMakeLists.txt  model_test.py  package.xml  setup.py
promp_demo_2d_ros/: 2d_demo_gui.ui  CMakeLists.txt  demo_2d_gui.py  gui.py  mse_plotting.py  package.xml  stock.txt
promp_demo_2d_ros/data/: demonstration_5.txt  demonstration_8.txt  demonstration_9.txt
promp_python/: CMakeLists.txt  package.xml  parse_trajectories.py  plot_trajectories.py  promp.py  promp_trajectory.py  setup.py  toyexample_promp.py
promp_ros/: CMakeLists.txt  package.xml
pyqt_multithread/: CMakeLists.txt  package.xml  setup.py
rviz_python/: CMakeLists.txt  package.xml  setup.py
teach_pendant/: CMakeLists.txt  eval_traj.txt  package.xml  qend.txt  qstart.txt  test.py
trajectory_visualizer/: CMakeLists.txt  package.xml  setup.py
(+1334 files in other folders)
