<package>
    <name>promp</name>
    <version>1.0.0</version>
    <description>
        Code for parsing trajectory demonstrations
    </description>
    <maintainer email="f.meccanici@heemskerk-innovative.nl">Floris Meccanici</maintainer>
    <author>Floris Meccanici</author>
    <license>new BSD</license>

<run_depend>rospy</run_depend>
<buildtool_depend>catkin</buildtool_depend>

</package>