<?xml version="1.0"?>
<package>
  <name>promp_context_ros</name>
  <version>0.0.1</version>
  <description>ProMP Overlay for ROS trajectories</description>

  <maintainer email="florismeccanici@gmail.com">Floris Meccanici</maintainer>

  <license>LGPL3</license>

  <!--   <build_depend>message_generation</build_depend> -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
