<package>

    <name>promp_demo_2d_ros</name>
    <version>1.0.0</version>
    <description>
    Learning from demonstration package
    </description>
    <maintainer email="f.meccanici@heemskerk-innovative.nl">Floris Meccanici</maintainer>
    <author>Floris Meccanici</author>
    <license>new BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>