<?xml version="1.0"?>
<package>
  <name>promp_ros</name>
  <version>0.0.0</version>
  <description>Implements Dynamic Movement Primitives in a robot agnostic way</description>

  <author>Floris Meccanici</author>
  <maintainer email="florismeccanici@gmail.com">Floris Meccanici</maintainer>

  <license>BSD</license>
    
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>cmake_modules</build_depend>
  
  <run_depend>common_msgs</run_depend> <!--nav_msgs, sensor_msgs, geometry_msgs -->
  <run_depend>image_common</run_depend>
  <run_depend>ros</run_depend>
  <run_depend>ros_comm</run_depend>  <!-- rospy, roscpp -->

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  
</package>
