<package>
    <name>multithread</name>
    <version>1.0.0</version>
    <description>
        ROS package for learning from demonstration applied to Marco. Used for my thesis.
    </description>
    <maintainer email="f.meccanici@heemskerk-innovative.nl">Floris Meccanici</maintainer>
    <author>Floris Meccanici</author>
    <license>new BSD</license>

<run_depend>rospy</run_depend>
<buildtool_depend>catkin</buildtool_depend>

</package>