<package>
    <name>trajectory_visualizer</name>
    <version>1.0.0</version>
    <description>
        trajectory visualization
    </description>
    <maintainer email="f.meccanici@heemskerk-innovative.nl">Floris Meccanici</maintainer>
    <author>Floris Meccanici</author>
    <license>new BSD</license>

<run_depend>rospy</run_depend>
<run_depend>message_generation</run_depend>


<buildtool_depend>catkin</buildtool_depend>

</package>