<package>

    <name>master_control</name>
    <version>1.0.0</version>
    <description>
    ROS Control Node for 3DoF bilateral telemanipulation of the Marco manipulator (including HiT gripper) using a geomagic touch device (Master side)
    </description>
    <maintainer email="n.mol@heemskerk-innovative.nl">Nicky Mol</maintainer>
    <maintainer email="g.vanderhart@heemskerk-innovative.nl">Guido van der Hart</maintainer>
    <author>Guido van der Hart</author>
    <license>new BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>dynamixel_workbench_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>message_filters</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>
    <build_depend>rosbag</build_depend>
    <build_depend>geomagic_touch_m</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>dynamixel_workbench_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>message_generation</run_depend>
    <run_depend>message_filters</run_depend>
    <run_depend>dynamic_reconfigure</run_depend>
    <run_depend>rosbag</run_depend>
    <run_depend>geomagic_touch_m</run_depend>

</package>