<package>

    <name>marco_arm_int</name>
    <version>1.0.0</version>
    <description>
    ROS Control Node for 3DoF bilateral telemanipulation of the Marco manipulator
    </description>
    <maintainer email="g.vanderhart@heemskerk-innovative.nl">Guido van der Hart</maintainer>
    <author>Guido van der Hart</author>
    <license>new BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>geometry_msgs</build_depend>
<!--    <build_depend>dynamixel_workbench_msgs</build_depend>-->
    <build_depend>message_generation</build_depend>
    <build_depend>slave_control</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>tf</run_depend>
    <run_depend>geometry_msgs</run_depend>
<!--    <run_depend>dynamixel_workbench_msgs</run_depend>-->
    <run_depend>message_generation</run_depend>
    <run_depend>slave_control</run_depend>

</package>
